# udplib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  b1.hex  input.txt  linux.cpp  mycode.cpp  uniudp.sln  universal.h
UDP_Communication_Framework/: UDP_Communication_Framework.cpp  UDP_Communication_Framework.vcxproj
UDP_Communication_Framework/x64/Debug/: UDP_Communication_Framework.exe.recipe
include/: CRC  hashes
src/: .clangd  UDPfileTransfer.cpp  bytes.h  common.h  hash.cpp  hash.h  linuxSockets.h  main.cpp  message.cpp  message.h  newpipe.cpp  newpipe.h  pipe.cpp  pipe.h  receiver.cpp  receiver.h  sender.cpp  sender.h  socket.h  uniudp.cpp  uniudp.vcxproj  uniudp.vcxproj.filters  windowsSockets.cpp  windowsSockets.h
